effect-agri.html created

--- a/pages/effect-agriculture.html
+++ b/pages/effect-agriculture.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Effect on Agriculture, Business and Education | COVID-19</title>
 
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/effect-agri.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
@@ -13,6 +13,43 @@
 <ima>
 
 <h1 align="center">Effect on Agriculture, Business and Education</h1>
+
+<div>
+	<h3>
+		Agriculture and supply chains
+	</h3><br>
+	<img src="../resources/images/effect-agri/a1.jpg" width="300"
+	height="150">
+	<img src="../resources/images/effect-agri/a2.jpg">
+	<p>
+
+COVID-19 is disrupting some activities in agriculture and supply chains. Preliminary reports show that the non-availability of migrant labor is interrupting some harvesting activities, particularly in northwest India where wheat and pulses are being harvested. There are disruptions in supply chains because of transportation problems and other issues. Prices have declined for wheat, vegetables, and other crops, yet consumers are often paying more. Media reports show that the closure of hotels, restaurants, sweet shops, and tea shops during the lockdown is already depressing milk sales. Meanwhile, poultry farmers have been badly hit due to misinformation, particularly on social media, that chicken are the carriers of COVID-19.<br><br>
+
+Here are some measures are required to keep the agricultural sector and supply chains working smoothly:
+<ul>
+
+<li>The government has correctly issued lockdown guidelines that exempt farm operations and supply chains. But implementation problems leading to labor shortages and falling prices should be rectified.</li>
+ 
+<li>Keeping supply chains functioning well is crucial to food security. It should be noted that 2 to 3 million deaths in the Bengal famine of 1943 were due to food supply disruptions—not a lack of food availability.</li>
+ 
+<li>Farm populations must be protected from the coronavirus to the extent possible by testing and practicing social distancing.</li>
+ 
+ <li>Farmers must have continued access to markets. This can be a mix of private markets and government procurement.
+ 
+ <li>Small poultry and dairy farmers need more targeted help, as their pandemic-related input supply and market-accessproblems are urgent.</p><br><br><hr><br>
+  <h2>Covid-19 Educational Disruption</h2><br><br>
+  <img src="../resources/images/effect-agri/e1.jpg">
+<img src="../resources/images/effect-agri/e2.jpg">
+ <br><br>
+  <p>
+  	Most governments around the world have temporarily closed educational institutions in an attempt to contain the spread of the COVID-19 pandemic.<br>
+
+These nationwide closures are impacting over 72% of the world’s student population. Several other countries have implemented localized closures impacting millions of additional learners.<br>
+
+UNESCO is supporting countries in their efforts to mitigate the immediate impact of school closures, particularly for more vulnerable and disadvantaged communities, and to facilitate the continuity of education for all through remote learning.<br>
+<br>
+  </p>
+</div>
 
 
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
