--- a/pages/effect-poor.html
+++ b/pages/effect-poor.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Effect on the poor | COVID-19</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" type="text/css" href="../css/pages.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
@@ -83,6 +83,7 @@
   Policies needed to mitigate poverty and distributional impacts will have to respond to each country’s context and circumstances. Having said that, the numbers above suggest that across affected countries:
 <br>
 <br>
+</li>
 <li>
 <h3>
 Any support package will need to quickly reach both the existing and new poor. 
@@ -99,14 +100,14 @@ Thus a society must help poor get their entitlement.
   This can be done using existing, publicly available data to monitor the unfolding economic and social impacts of the crisis, including prices, service delivery, and economic activity, as well as social sentiment and behaviors. In addition, governments can use mobile technology to safely gather information from a representative sample of households or individuals. Phone surveys can collect information on health and employment status, food security, coping strategies, access to basic services and safety nets and other outcomes closely related to the risk of falling (further) into poverty.
   <br>
   <br>
-  <table align="center" height="247" width="400" border="2">
+  <table align="center" height="247" width="400" border="3">
   <tr>
   <td width="388">
   <img src="../resources/images/poor/2.jpg" height="247" width="400">
   </td>
   </tr>
   <tr bgcolor="#000000" align="center">
-  <td style="    padding: 15px;"> Family going back to their village</td>
+  <td style="    padding: 15px;"> Migrant workers going back to their village</td>
   </tr>
   </table>
   <br>
