--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Gallery | COVID-19</title>
-<link rel="stylesheet" type="text/css" href="../css/pages.css">
+<link rel="stylesheet" type="text/css" href="../css/gallery.css">
 
 <link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
@@ -11,19 +11,16 @@
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <h1 align="center">Gallery</h1>
-<table width="1000" border="6" align="center" >
-  <tr>
-    <td width="450" height="264"><img src="../resources/images/gallery/1.jpg" width="450" height="264"></td>
-    <td width="450"><img src="../resources/images/gallery/3.jpg" width="450" height="264"></td>
-    <td width="450"><img src="../resources/images/gallery/2.jpg" width="450" height="264"></td>
-  </tr>
-  <tr>
-    <td height="264"><img src="../resources/images/gallery/4.jpg" width="450" height="264"></td>
-    <td><img src="../resources/images/gallery/5.jpg" width="450" height="264"></td>
-    <td><img src="../resources/images/gallery/6.jpg" width="450" height="264"></td>
-  </tr>
-</table>
-<br>
+<div class="container">
+<div><img src="../resources/images/gallery/1.jpg" ></div>
+    <div><img src="../resources/images/gallery/3.jpg"  ></div>
+    <div><img src="../resources/images/gallery/2.jpg"></div>
+
+
+     <div><img src="../resources/images/gallery/4.jpg"></div>
+        <div><img src="../resources/images/gallery/5.jpg" ></div>
+    <div><img src="../resources/images/gallery/6.jpg"></div>
+  </div>
 
 <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
       <tr>
