--- a/pages/links.html
+++ b/pages/links.html
@@ -52,7 +52,7 @@
   </tr>
   <tr>
     <td height="50" align="center"><a href="effect-poor.html">Effect on poor families and help by society</a></td>
-    <td align="center"><a href="role-mobile.html">Role of mobile apps in door to door delivery of household items and medicines</a></td>
+    <td align="center"><a href="cost.html">Cost of Treatment</a></td>
   </tr>
   <tr>
     <td height="50" align="center"><a href="effect-social-gathering.html">Effect of COVID-19 on social gathering and meeting in future</a></td>
