--- a/pages/about-covid-19.html
+++ b/pages/about-covid-19.html
@@ -34,14 +34,12 @@ You can be infected by breathing in the virus if you are within close proximity 
  <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" id="learn">Learn more on who.int</a><br><br>
 	</section>
 </div>
+<div class="buttons">
 
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
 
-  <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
