--- a/pages/about-site.html
+++ b/pages/about-site.html
@@ -72,13 +72,12 @@
             </table>
         </div>
 
+<div class="buttons">
 
-<table style="margin-top:20px; border-collapse: collapse;" width="268" height="46" border="1" align="center" bgcolor="#000000">
-  <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
