--- a/pages/effect-world.html
+++ b/pages/effect-world.html
@@ -51,12 +51,12 @@ The first point of prevention is the dissemination of information in indigenous 
 The large number of indigenous peoples who are outside of the social protection system further contributes to vulnerability, particularly if they are dependent on income from the broader economy – produce, tourism, handicrafts and employment in urban areas. In this regard, Governments should ensure that interim financial support measures include indigenous peoples and other vulnerable groups.
 	</p>
 </div>
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
