--- a/pages/india-stats.html
+++ b/pages/india-stats.html
@@ -307,12 +307,12 @@
 </table>
 <br>
 <br>
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
