--- a/pages/medical-solutions.html
+++ b/pages/medical-solutions.html
@@ -76,12 +76,12 @@ One drug that has received a lot of attention is the antiviral drug remdesivir. 
 
 </div>
 
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
