--- a/pages/social-distancing.html
+++ b/pages/social-distancing.html
@@ -40,12 +40,9 @@ It may be possible that a person can get COVID-19 by touching a surface or objec
 	</p>
 
 </div>
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-    <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
