--- a/pages/world-stats.html
+++ b/pages/world-stats.html
@@ -2118,12 +2118,9 @@ Data as of 6th May 2020 3:00 PM
 <br>
 <br>
 
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
-  <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
