--- a/pages/effect-economy.html
+++ b/pages/effect-economy.html
@@ -115,13 +115,13 @@ Already Chinese factories’ Jan-Feb profits have hit their lowest in a decade a
 
 <br>
 <br>
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 
 </body>
 </html>
