--- a/pages/effect-lockdown.html
+++ b/pages/effect-lockdown.html
@@ -47,12 +47,12 @@ The coronavirus crisis also presents India with an opportunity to invest in a cl
 </div>
 
 
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
