--- a/pages/effect-poor.html
+++ b/pages/effect-poor.html
@@ -117,12 +117,12 @@ Thus a society must help poor get their entitlement.
   <br>
   <br>
   <br>
-  <table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-    <tr>
-      <td width="141" align="center"><a href="../index.html" >Home</a></td>
-      <td width="141" align="center"><a href="links.html" >Index</a>
-      </td>
-    </tr>
-  </table>
+  <div class="buttons">
+
+
+
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
