--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -12,22 +12,21 @@
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
 <h1 align="center">Gallery</h1>
 <div class="container">
-<div><img src="../resources/images/gallery/1.jpg" ></div>
-    <div><img src="../resources/images/gallery/3.jpg"  ></div>
-    <div><img src="../resources/images/gallery/2.jpg"></div>
+ <div class="gallery">
+<div class="img img1"><img src="../resources/images/gallery/11.jpg"  ></div>
+    <div class="img img2"><img src="../resources/images/gallery/3.jpg"  ></div>
+    <div class="img img3"><img src="../resources/images/gallery/2.jpg"
+     ></div>
 
 
-     <div><img src="../resources/images/gallery/4.jpg"></div>
-        <div><img src="../resources/images/gallery/5.jpg" ></div>
-    <div><img src="../resources/images/gallery/6.jpg"></div>
-  </div>
+     <div class="img img4"><img src="../resources/images/gallery/4.jpg"></div>
+        <div class="img img5"><img src="../resources/images/gallery/5.jpg" ></div>
+    <div class="img img6"><img src="../resources/images/gallery/6.jpg"></div>
+  </div><br><br>
 
-<table width="268" height="46" border="1" align="center" bgcolor="#b5a8a7">
-      <tr>
-    <td width="141" align="center"><a href="../index.html" >Home</a></td>
-    <td width="141" align="center"><a href="links.html" >Index</a>
-    </td>
-  </tr>
-</table>
+<div class="buttons">
+<a href="../index.html">Home</a>
+<a href="links.html">Index</a>
+</div>
 </body>
 </html>
