--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     Home | COVID-19
   </title>
   
-  <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!--<link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">-->
+  <link rel=" shortcut icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+ 
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
@@ -47,11 +46,9 @@
 <br>
 <br>
 <br>
-<table width="268" height="46" border="1" align="center" bgcolor="#000000">
-  <tr>
-    <td width="258" align="center"><a href="pages/links.html" >Click Here to know more</a></td>
-  </tr>
-</table>
+<div class="click">
+	<a href="pages/links.html" >Click Here to know more</a>
+</div>
 
 </body>
 </html>
