--- a/pages/about-covid-19.html
+++ b/pages/about-covid-19.html
@@ -3,10 +3,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>About COVID-19</title>
 
-<link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
+
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+
+
 <link rel="stylesheet" type="text/css" href="../css/about-covid-19.css">
 
 
@@ -15,7 +15,7 @@
 <ima>
 
 <br>
-<h1 align="center"><a href="about-covid-19.html">About COVID-19</a></h1>
+<h1 align="center">About COVID-19</h1>
 <br>
 <br>
 <br>
