--- a/pages/about-site.html
+++ b/pages/about-site.html
@@ -4,9 +4,9 @@
 <title>About Website</title>
 
 <link rel="stylesheet" type="text/css" href="../css/about-site.css">
-<link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
+
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
+
 <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -65,8 +65,8 @@
                   <td><a href=" https://ankitatrey.github.io/covid-19/">Click Here</a></td>
               </tr>
               <tr>
-                  <td>Contributed By:</td>
-                  <td>Ashutosh Singh<br>Ankit Atrey</td>
+                  <td>Created By:</td>
+                  <td>Ankit Atrey</td>
               </tr>
 
             </table>
