--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,9 +4,9 @@
 <title>Gallery | COVID-19</title>
 <link rel="stylesheet" type="text/css" href="../css/gallery.css">
 
-<link rel="apple-touch-icon" sizes="180x180" href="../resources/icons/apple-touch-icon.png">
+
 <link rel="icon" type="image/png" sizes="32x32" href="../resources/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../resources/icons/favicon-16x16.png">
+
 <link rel="manifest" href="/site.webmanifest">
 </head>
 <body text="#FFFFFF" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF">
@@ -17,11 +17,16 @@
     <div class="img img2"><img src="../resources/images/gallery/3.jpg"  ></div>
     <div class="img img3"><img src="../resources/images/gallery/2.jpg"
      ></div>
+     <div class="img img4"><img src="../resources/images/gallery/7.jpg"
+     ></div><div class="img img5"><img src="../resources/images/gallery/8.jpg"
+     ></div><div class="img img6"><img src="../resources/images/gallery/9.jpg"
+     ></div><div class="img img7"><img src="../resources/images/gallery/10.jpg"
+     ></div>
 
 
-     <div class="img img4"><img src="../resources/images/gallery/4.jpg"></div>
-        <div class="img img5"><img src="../resources/images/gallery/5.jpg" ></div>
-    <div class="img img6"><img src="../resources/images/gallery/6.jpg"></div>
+     <div class="img img8"><img src="../resources/images/gallery/4.jpg"></div>
+        <div class="img img9"><img src="../resources/images/gallery/5.jpg" ></div>
+    <div class="img img10"><img src="../resources/images/gallery/6.jpg"></div>
   </div><br><br>
 
 <div class="buttons">
